--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<a class="nav-link active" href="home.html">Home</a>
+					<a class="nav-link active" href="index.html">Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link active" href="portfolio.html">Portfolio</a>
