--- a/portfolio.html
+++ b/portfolio.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/portfolio.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/nav.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="portfolio.css">
+	<link rel="stylesheet" type="text/css" href="bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="nav.css">
 </head>
 <body>
 	<!-- Navigation -->
@@ -34,18 +34,18 @@
 	<!-- End Navigation -->
 
 	<div id="container">
-		<img src="images/image1.jpg" class="imgGallery">
-		<img src="images/image2.jpg" class="imgGallery">
-		<img src="images/image3.jpg" class="imgGallery">
-		<img src="images/image4.jpg" class="imgGallery">
-		<img src="images/image5.jpg" class="imgGallery">
-		<img src="images/image6.jpg" class="imgGallery">
-		<img src="images/image7.jpg" class="imgGallery">
-		<img src="images/image8.jpg" class="imgGallery">
-		<img src="images/image9.jpg" class="imgGallery">
-		<img src="images/image10.jpg" class="imgGallery">
-		<img src="images/image11.jpg" class="imgGallery">
-		<img src="images/image12.jpg" class="imgGallery">
+		<img src="image1.jpg" class="imgGallery">
+		<img src="image2.jpg" class="imgGallery">
+		<img src="image3.jpg" class="imgGallery">
+		<img src="image4.jpg" class="imgGallery">
+		<img src="image5.jpg" class="imgGallery">
+		<img src="image6.jpg" class="imgGallery">
+		<img src="image7.jpg" class="imgGallery">
+		<img src="image8.jpg" class="imgGallery">
+		<img src="image9.jpg" class="imgGallery">
+		<img src="image10.jpg" class="imgGallery">
+		<img src="image11.jpg" class="imgGallery">
+		<img src="image12.jpg" class="imgGallery">
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
