--- a/register.html
+++ b/register.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>Registration</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/nav.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="nav.css">
 	<style type="text/css">
 		body {
 		background-color: #71eeb8!important;
